<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.4">
  <POU Name="sub_Access" Id="{cf2eef73-b407-45a6-8d6e-b5c80300240a}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM sub_Access
VAR
	fbTuerGong			:	FB_Impulse;
	fbGaragentor		:	FB_Impulse;
	fbgaragentorStatus	:	FB_GarageStatus;
	
	fbTuerGarageHaus	:	FB_Door;
	fbTuerGarageStrasse	:	FB_Door;
	fbTuerWerkstatt		:	FB_Door;
	fbTuerHaus			:	FB_Door;
	
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//###################################################################################
//##-----------------------------------ACCESS--------------------------------------##
//###################################################################################

//--------------------TürGong----------------------------------
fbTuerGong.bInputs[0]	:= gvl_EA.bID24_01_1;

fbTuerGong(
	bR_Trig			:= TRUE,
	bInputSecLoop	:= gvl_mb.Output_Coils[245],
	bInputHA		:= gvl_mb.Output_Coils[14],
	tHigh			:= T#500MS,
	bOut			=> gvl_EA.bOD02_3
);
//-------------------------------------------------------------

//--------------------Garagentor----------------------------------
fbGaragentor.bInputs[0]	:= gvl_EA.bID05_1;

fbGaragentor(
	bR_Trig			:= TRUE,
	bInputHA		:= gvl_mb.Output_Coils[13],
	tHigh			:= T#500MS,
	bOut			=> gvl_EA.bWOD01_6
);
//-------------------------------------------------------------

//--------------------Garagentor Status----------------------------------
fbGaragentorStatus(
	bInputOpened	:= gvl_EA.bWID01_15,
	bInputClosed	:= gvl_EA.bWID01_16,
	bInputAir		:= gvl_EA.bWID01_14,
	iOut			=> gvl_mb.Output_Registers[25]
);
//-------------------------------------------------------------

//--------------------Türöffner Garagentür Haus----------------------------------
fbTuerGarageHaus(
	bInput			:= gvl_EA.bWID01_9,
	bInputSwitch	:= gvl_EA.bID05_2,
	bInputHA		:= gvl_mb.Output_Coils[35],
	tPulse			:= T#5S,
	tPulseSwitch	:= T#10S,
	bOut			=> gvl_EA.bWOD01_11
);
//-------------------------------------------------------------

//--------------------Türöffner Garagentür Strasse----------------------------------
fbTuerGarageStrasse(
	bInput			:= gvl_EA.bWID01_8,
	bInputHA		:= gvl_mb.Output_Coils[34],
	tPulse			:= T#5S,
	bOut			=> gvl_EA.bWOD01_10
);
//-------------------------------------------------------------

//--------------------Türöffner Werkstatt----------------------------------
fbTuerGarageStrasse(
	bInput			:= gvl_EA.bWID01_10,
	bInputHA		:= gvl_mb.Output_Coils[41],
	tPulse			:= T#5S,
	bOut			=> gvl_EA.bWOD02_1
);
//-------------------------------------------------------------

//--------------------Türöffner Haustür----------------------------------
fbTuerHaus(
	bInput			:= gvl_EA.bID24_01_2,
	bInputHA		:= gvl_mb.Output_Coils[16],
	bInputPerm		:= gvl_mb.Output_Coils[17],
	tPulse			:= T#5S,
	bOut			=> gvl_EA.bOD04_5
);
//-------------------------------------------------------------


]]></ST>
    </Implementation>
    <LineIds Name="sub_Access">
      <LineId Id="83" Count="3" />
      <LineId Id="71" Count="0" />
      <LineId Id="63" Count="0" />
      <LineId Id="75" Count="0" />
      <LineId Id="74" Count="0" />
      <LineId Id="77" Count="0" />
      <LineId Id="88" Count="0" />
      <LineId Id="93" Count="0" />
      <LineId Id="79" Count="0" />
      <LineId Id="81" Count="1" />
      <LineId Id="87" Count="0" />
      <LineId Id="95" Count="5" />
      <LineId Id="102" Count="3" />
      <LineId Id="94" Count="0" />
      <LineId Id="183" Count="1" />
      <LineId Id="187" Count="5" />
      <LineId Id="182" Count="0" />
      <LineId Id="132" Count="1" />
      <LineId Id="136" Count="0" />
      <LineId Id="142" Count="0" />
      <LineId Id="144" Count="3" />
      <LineId Id="140" Count="1" />
      <LineId Id="131" Count="0" />
      <LineId Id="152" Count="3" />
      <LineId Id="157" Count="1" />
      <LineId Id="160" Count="1" />
      <LineId Id="151" Count="0" />
      <LineId Id="163" Count="7" />
      <LineId Id="162" Count="0" />
      <LineId Id="112" Count="0" />
      <LineId Id="194" Count="3" />
      <LineId Id="201" Count="0" />
      <LineId Id="198" Count="2" />
      <LineId Id="111" Count="0" />
      <LineId Id="117" Count="1" />
      <LineId Id="114" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>